# vsomeip-sys

./: Cargo.toml  build.rs
examples/: client_example.rs  service_example.rs
src/: cxx_bridge.rs  lib.rs
src/glue/: application_registrations.cpp  application_registrations.h
src/glue/include/: application_wrapper.h  message_wrapper.h  runtime_wrapper.h
src/glue/src/: application_wrapper.cpp
src/vsomeip-src/: .gitignore
src/vsomeip-src/implementation/runtime/include/: application_impl.hpp  runtime_impl.hpp
src/vsomeip-src/implementation/runtime/src/: application_impl.cpp  runtime.cpp  runtime_impl.cpp
src/vsomeip-src/interface/vsomeip/: application.hpp  handler.hpp  runtime.hpp
src/wrappers/include/: application_wrapper.h  function_pointer_to_std_function.h  message_wrapper.h  payload_wrapper.h
